--- a/app/views/dashboard/alarms.jade
+++ b/app/views/dashboard/alarms.jade
@@ -20,7 +20,7 @@ div.widget
         tr
           td(colspan='2')
             small
-              i.icon-bullhorn(style='margin-top: -2px; color: #a0a0a0 !important;')
+              i.glyphicon.glyphicon-bullhorn(style='margin-top: -2px; color: #a0a0a0 !important;')
               i {{alarm.msgCode}}
   hr.lastline(ng-hide='loading.alerts')
   p(ng-hide='loading.alerts')
