--- a/app/views/dashboard/snapshots.jade
+++ b/app/views/dashboard/snapshots.jade
@@ -1,5 +1,5 @@
-.row-fluid
-  #availabilities.sa.widget.span12
+.row
+  #availabilities.sa.widget.col-md-12
     div.head
       h4
         | Overzicht beschikbaarheid{{current.group | groupIdToName:true | toTitleCase}}
