--- a/app/views/faq.jade
+++ b/app/views/faq.jade
@@ -1,6 +1,6 @@
 .page-header: h2 FAQ
 
-.row-fluid
+.row
   .tabbable.tabs-left
     ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
       li(class="{{(views.web==true) && 'active'}}")
