--- a/app/views/help.jade
+++ b/app/views/help.jade
@@ -2,10 +2,10 @@
   h2 {{ui.help.header}}
   .btn-group.pull-right
     a.btn.btn-success(href='http://static.ask-cs.com/standby/Handleiding%20Standby{{(config.profile.meta=="knrm") && " KNRM" || ""}}.pdf', target='_blank')
-      i.icon-book.icon-white
+      i.glyphicon.glyphicon-book.glyphicon-white
       | &nbsp;{{ui.downloads.manual}}
 
-.row-fluid
+.row
   .tabbable.tabs-left
 
     ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
