--- a/app/views/login/change-password.jade
+++ b/app/views/login/change-password.jade
@@ -13,5 +13,5 @@
     input(type='password',
     ng-model='changeData.retypePass',
     placeholder='{{ui.login.ph_retypePass}}')
-    button.btn.btn-large.btn-primary(type='submit')
+    button.btn.btn-lg.btn-primary(type='submit')
       | {{ui.login.changePassword}}
