--- a/app/views/messages/view.jade
+++ b/app/views/messages/view.jade
@@ -1,7 +1,7 @@
 .tab-header
 	h3.pull-left {{message.subject}}
 	.pull-right
-		button.btn(type='button', ng-click='closeTabs()')
+		button.btn.btn-default(type='button', ng-click='closeTabs()')
 			| {{ui.message.close}}
 hr
 dl
