--- a/app/views/settings.jade
+++ b/app/views/settings.jade
@@ -1,6 +1,6 @@
 .page-header: h2 {{ui.settings.settings}}
 
-.row-fluid
+.row
 	.tabbable.tabs-left
 		ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
 			li.active
