--- a/app/views/groups-wish.jade
+++ b/app/views/groups-wish.jade
@@ -3,6 +3,6 @@ section#groups-wish
     fieldset
       .control-group
         .controls
-          input.span1(type='text', ng-model='popover.wish')
-          button.btn.btn-primary.btn-small(type='button', ng-click='saveWish(popover.id, popover.wish); dismiss()') {{ui.groups.widgetSave}}
-          button.btn.btn-small(type='button', ng-click='dismiss()') {{ui.groups.widgetCancel}}
+          input.col-md-1(type='text', ng-model='popover.wish')
+          button.btn.btn-primary.btn-sm(type='button', ng-click='saveWish(popover.id, popover.wish); dismiss()') {{ui.groups.widgetSave}}
+          button.btn.btn-default.btn-sm(type='button', ng-click='dismiss()') {{ui.groups.widgetCancel}}
