--- a/app/views/login/forgot-password.jade
+++ b/app/views/login/forgot-password.jade
@@ -12,7 +12,7 @@
 		input(type='text',
 		ng-model='remember.id',
 		placeholder='{{ui.login.placeholder_username}}')
-		button.btn.btn-large.btn-primary(type='submit')
+		button.btn.btn-lg.btn-primary(type='submit')
 			| {{ui.login.resetPassword}}
 		p
 			small: a(ng-click='views.login=true; views.forgot=false') {{ui.login.returnLogin}}
