--- a/app/views/login/login-form.jade
+++ b/app/views/login/login-form.jade
@@ -19,11 +19,11 @@ ng-hide='views.help || views.changePass')
 		input(type='password',
 		ng-model='logindata.password',
 		placeholder='{{ui.login.placeholder_password}}')
-		label.checkbox.span3
+		label.checkbox.col-md-3
 			input(type='checkbox',
 			ng-model='logindata.remember')
 			| {{ui.login.label_rememberMe}}
-		button.btn.btn-large.btn-primary(type='submit')
+		button.btn.btn-lg.btn-primary(type='submit')
 			| {{ui.login.button_login}}
 		p
 			small
