--- a/app/views/messages.jade
+++ b/app/views/messages.jade
@@ -6,7 +6,7 @@
 			ng-click='composeMessage(); setViewTo("compose")')
 				| {{ui.message.composeAMessage}}
 
-.row-fluid
+.row
 	.tabbable.tabs-left
 
 		ul.nav.nav-tabs.nav-tabs-app(style='margin-right: 0px;')
@@ -44,7 +44,7 @@
 					h3.pull-left
 						span(ng-hide='views.scheaduler') {{ui.message.composeMessage}}
 						span(ng-show='views.scheaduler') {{scheaduled.title | toTitleCase}}
-					button.btn.pull-right(type='submit', ng-click='(origin=="inbox"); closeTabs()')
+					button.btn.btn-default.pull-right(type='submit', ng-click='(origin=="inbox"); closeTabs()')
 						| {{ui.message.close}}
 				hr
 				form(ng-controller='scheaduler')
@@ -72,20 +72,20 @@
 
 						.control-group
 							label.control-label {{ui.message.subject}}
-							input.span5(type='text', ng-model='message.subject', placeholder='{{ui.message.typeSubject}}')
+							input.col-md-5(type='text', ng-model='message.subject', placeholder='{{ui.message.typeSubject}}')
 
 						.control-group
 							label.control-label {{ui.message.message}}
-							textarea.span7(rows='7', ng-model='message.body')
+							textarea.col-md-7(rows='7', ng-model='message.body')
 
 						.control-group(ng-hide='StandBy.resources.role > 1')
 							label.control-label {{ui.message.repeat}}
 							.btn-group(data-toggle='buttons-radio')
-								button.btn.btn-small(type='button',
+								button.btn.btn-default.btn-sm(type='button',
 								class="{{(scheaduled.status) && 'btn-success.active'}}",
 								ng-model='scheaduled.status',
 								ng-click='scheaduled.status = true; addNewOffset()') {{ui.message.repeatOn}}
-								button.btn.btn-small(type='button',
+								button.btn.btn-default.btn-sm(type='button',
 								class="{{(!scheaduled.status) && 'active'}}",
 								ng-model='scheaduled.status',
 								ng-click='scheaduled.status = false') {{ui.message.repeatOff}}
@@ -94,12 +94,12 @@
 							header
 								h4 {{ui.message.repeat}}
 								.pull-right
-									button.btn.btn-small.btn-success(type='button', ng-click='addNewOffset()')
+									button.btn.btn-sm.btn-success(type='button', ng-click='addNewOffset()')
 										| {{ui.message.repeatNew}}
 							hr
 							.control-group
 								label.control-label {{ui.message.notificationLabel}}
-								input.span6(type='text', ng-model='scheaduled.title', placeholder='{{ui.message.notificationLabel}}')
+								input.col-md-6(type='text', ng-model='scheaduled.title', placeholder='{{ui.message.notificationLabel}}')
 
 							.control-group(ng-hide='scheaduleCount > 0')
 								label.control-label {{ui.message.notifications}}
