--- a/app/views/messages/notifications.jade
+++ b/app/views/messages/notifications.jade
@@ -17,7 +17,7 @@ div(ng-show='scheadules.length > 0')
 			tr(ng-repeat='scheadule in scheadules')
 				td
 					span.label.label-success(ng-show='scheadule.active') {{ui.message.enabled}}
-					span.label(ng-hide='scheadule.active') {{ui.message.disabled}}
+					span.label.label-default(ng-hide='scheadule.active') {{ui.message.disabled}}
 				td.scheadule-icons
 					div
 						span.entypo.sms(ng-show='scheadule.sms') 
@@ -33,10 +33,10 @@ div(ng-show='scheadules.length > 0')
 					div(ng-bind-html-unsafe='scheadule.offsets | nicelyOffsets')
 				td
 					.pull-right
-						button.btn.btn-mini(ng-click='requestNotification(scheadule.uuid)')
-							i.icon-edit
-						button.btn.btn-danger.btn-mini(type='submit', ng-click='scheaduler.remove(scheadule.uuid)')
-							i.icon-trash.icon-white
+						button.btn.btn-default.btn-xs(ng-click='requestNotification(scheadule.uuid)')
+							i.glyphicon.glyphicon-edit
+						button.btn.btn-danger.btn-xs(type='submit', ng-click='scheaduler.remove(scheadule.uuid)')
+							i.glyphicon.glyphicon-trash.glyphicon-white
 	span.muted.pull-right
 		small
 			i {{ui.message.inTotal}}: {{scheadules.length}}
