--- a/app/views/planboard/time-toolbar.jade
+++ b/app/views/planboard/time-toolbar.jade
@@ -15,26 +15,26 @@ div#timeline-toolbar
   div(class="{{ (browser.mobile) && 'pull-left' || 'pull-right' }}",
   style="{{ (browser.mobile) && 'margin-left: -10px;' }}")
     .btn-group
-      button.btn(type='button',
+      button.btn.btn-default(type='button',
       class="{{(timeline.config.legendarer==true) && 'active'}}",
       ng-click='showLegenda()',
       ng-model='timeline.config.legendarer') {{ui.planboard.legenda}}
     .btn-group(ng-show='timeline.current.layouts.group')
-      button.btn(type='button',
+      button.btn.btn-default(type='button',
       class="{{(timeline.config.bar==true) && 'active'}}",
       ng-click='barCharts()',
       ng-model='timeline.config.bar') {{ui.planboard.barCharts}}
     .btn-group(ng-show='timeline.current.layouts.group')
-      button.btn(type='button',
+      button.btn.btn-default(type='button',
       class="{{(timeline.config.wishes==true) && 'active'}}",
       ng-click='groupWishes()',
       ng-model='timeline.config.wishes') {{ui.planboard.wishes}}
     .btn-group
-      button.btn(type='button',
+      button.btn.btn-default(type='button',
       class="{{(timeline.current.layouts.group==true) && 'active'}}",
       ng-model='timeline.current.layouts.group',
       ng-click='requestTimeline("group")') {{ui.planboard.group}}
-      button.btn(type='button',
+      button.btn.btn-default(type='button',
       class="{{(timeline.current.layouts.members==true) && 'active'}}",
       ng-model='timeline.current.layouts.members',
       ng-click='requestTimeline("members")',
