--- a/app/styles/app/_dashboard.scss
+++ b/app/styles/app/_dashboard.scss
@@ -151,7 +151,7 @@
 
         .blocks {
 
-          .span4 {
+          .col-md-4 {
             &:first-child {
               padding-left: 15px;
             }
@@ -310,7 +310,7 @@
             margin-top: -30px;
             // display: none;
 
-            .span4 {
+            .col-md-4 {
               padding-right: 40px;
 
               h4 {
@@ -447,7 +447,7 @@
           float: left;
           display: block;
           min-width: 54px;
-          height: 36px;
+          height: 54px;
           text-align: center;
           -webkit-border-radius: 5px;
           -moz-border-radius: 5px;
@@ -455,6 +455,7 @@
           color: #fff;
           margin-bottom: 5px;
           padding-top: 18px;
+          line-height: 20px;
           // background-color: #415e6b;
           background-color: #6cad6c;
 
@@ -511,7 +512,7 @@
             margin-bottom: 5px;
 
             a {
-              color: $textColor;
+              color: $text-color;
             }
           }
 
