--- a/app/styles/app/_frame.scss
+++ b/app/styles/app/_frame.scss
@@ -194,7 +194,7 @@
 
 .page-header {
   min-height: 40px;
-  border-bottom: 1px solid $hrBorder;
+  border-bottom: 1px solid $hr-border;
 
   h2 {
     display: inline;
